--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,12 +9,28 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".View.ConfirmEmailActivity"></activity>
-        <activity android:name=".View.PrivacyPoliceActivity" />
-        <activity android:name=".View.SignInActivity" />
-        <activity android:name=".View.SignUpActivity" />
-        <activity android:name=".View.LoginActivity" />
-        <activity android:name=".View.MainActivity">
+        <activity
+            android:name=".View.ConfirmEmailActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".View.PrivacyPoliceActivity"
+            android:screenOrientation="portrait">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".View.LoginActivity" />
+        </activity>
+        <activity
+            android:name=".View.SignInActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".View.SignUpActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".View.LoginActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".View.MainActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
