--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,12 +6,16 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".View.NameRegisterActivity"
-            android:screenOrientation="portrait">
-        </activity>
+        <activity android:name=".View.LawyerCodeActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".View.TypeRegistrationActivity"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".View.NameRegisterActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".View.ConfirmEmailActivity"
             android:screenOrientation="portrait" />
