--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
         minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
-        versionName "1.0.6"
+        versionName "1.0.7"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -32,6 +32,8 @@ dependencies {
     implementation 'com.github.techisfun:slidingswitch:0.2'
     implementation 'com.chootdev:csnackbar:1.4.2'
     implementation 'com.jaredrummler:material-spinner:1.3.1'
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
+    implementation 'com.karumi:dexter:4.2.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
