--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.braumsolutions.advogadoresponde">
 
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,10 +11,16 @@
         android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".View.LawyerCodeActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".View.TypeRegistrationActivity"
-            android:screenOrientation="portrait"/>
+        <activity android:name=".View.UserImageActivity"
+            android:screenOrientation="portrait">
+
+        </activity>
+        <activity
+            android:name=".View.LawyerCodeActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".View.TypeRegistrationActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".View.NameRegisterActivity"
             android:screenOrientation="portrait" />
