--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,20 +13,17 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".View.ChatActivity"
-            android:screenOrientation="portrait">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".View.MainActivity" />
-        </activity>
-        <activity android:name=".View.YourCasesActivity"
+        <activity android:name=".View.OccupationAreaCaseActivity"
+            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".View.ChatActivity"
             android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".View.MainActivity" />
         </activity>
         <activity
-            android:name=".View.NewCaseActivity"
+            android:name=".View.YourCasesActivity"
             android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
