--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".View.OccupationAreaCaseActivity"
-            android:screenOrientation="portrait"></activity>
+        <activity android:name=".View.FileCaseActivity"></activity>
+        <activity
+            android:name=".View.OccupationAreaCaseActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".View.ChatActivity"
             android:screenOrientation="portrait">
