--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,14 +13,17 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".View.LawyerCasesActivity"
+        <activity android:name=".View.ReportCaseActivity"></activity>
+        <activity
+            android:name=".View.LawyerCasesActivity"
             android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".View.MainActivity" />
         </activity>
-        <activity android:name=".View.ViewUserProfileActivity"
-            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".View.ViewUserProfileActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".View.ListChatActivity"
             android:screenOrientation="portrait">
