--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
         minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
-        versionName "1.0.33"
+        versionName "1.0.34"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -40,6 +40,8 @@ dependencies {
     implementation 'com.github.medyo:android-about-page:1.2.4'
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.github.himangipatel:ImagesPreview:0.0.5'
+    implementation 'com.kaopiz:kprogresshud:1.2.0'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
