--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,13 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".View.Profile.UserProfileActivity"
-            android:screenOrientation="portrait"></activity>
-        <activity android:name=".View.Profile.LawyerProfileActivity"
-            android:screenOrientation="portrait"/>
+        <activity android:name=".View.Profile.ViewLawyerProfileActivity"></activity>
+        <activity
+            android:name=".View.Profile.UserProfileActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".View.Profile.LawyerProfileActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".View.Cases.ReportCaseActivity"
             android:screenOrientation="portrait" />
