--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
         minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
-        versionName "1.0.42"
+        versionName "1.0.43"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -42,6 +42,7 @@ dependencies {
     implementation 'com.github.himangipatel:ImagesPreview:0.0.5'
     implementation 'com.kaopiz:kprogresshud:1.2.0'
     implementation 'com.koushikdutta.ion:ion:2.2.1'
+    implementation 'com.github.congfandi:simpleDatePicker:Dateicker'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
