--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -72,7 +72,7 @@
                 android:value=".View.Cases.OpenCaseActivity" />
         </activity>
         <activity
-            android:name=".View.Cases.YourCasesActivity"
+            android:name=".View.Cases.UserCasesActivity"
             android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
