--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
         minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
-        versionName "1.0.51"
+        versionName "1.0.52"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -44,6 +44,8 @@ dependencies {
     implementation 'com.koushikdutta.ion:ion:2.2.1'
     implementation 'com.github.congfandi:simpleDatePicker:Dateicker'
     implementation 'com.github.thunder413:DateTimeUtils:1.0'
+    implementation 'com.getkeepsafe.taptargetview:taptargetview:1.12.0'
+    implementation 'com.github.GrenderG:Toasty:1.3.1'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
